# controle-siscomex-test

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG_2026-01-20.md  DEPLOY_DOKPLOY.md  Dockerfile  LICENSE  PATCHES_CORRECAO.md  PERFORMANCE_ANALYSIS.md  README.md  TUTORIAL_TESTES_VPS.md  config_exemplo.env  consulta_sap.py  cron_job.sh  db_manager.py  db_schema.py  docker-compose.yml  download_tabelas.py  due_processor.py  entrypoint.sh  instalar.py  main.py  pyproject.toml  requirements.txt  sync_atualizar.py  sync_novas.py  test_connection.sh  token_manager.py
.claude/: settings.local.json
.context/: cctr_api.html  limites_acesso.html
.context/agents/: architect-specialist.md  backend-specialist.md  bug-fixer.md  code-reviewer.md  database-specialist.md  devops-specialist.md  documentation-writer.md  feature-developer.md  frontend-specialist.md  mobile-specialist.md  performance-optimizer.md  refactoring-specialist.md  security-auditor.md  test-writer.md
.context/docs/: README.md  architecture.md  changelog-v2.md  codebase-map.json  data-flow.md  project-overview.md
.cursor/: mcp.json
.github/workflows/: tests.yml
.serena/: project.yml
docs/: AGENTS.md  ANALISE_EXTRATO_DUE.md  DIAGRAMA_RELACIONAMENTOS.md  MELHORIAS_PROPOSTAS.md  RESUMO_OTIMIZACOES.md  SCHEMA_POSTGRESQL.md  TESTES_API_ENDPOINTS.md  diagnostico_execucao_26_01_2026.md  schema.md
docs/deployment/: CLOUDFLARE_SETUP_GUIDE.md  DEPLOY_DOKPLOY.md  DNS_CONFIG_AGROVEX.md
docs/troubleshooting/: CLOUDFLARE_MCP_ERROR_DIAGNOSTIC.md  RELATORIO_BUGS_SISCOMEX.md
migrations/: 001_remove_nonexistent_api_fields.sql  README.md
scripts/: sync_diario.bat  sync_diario.sh
src/: main.py  main.py.backup
src/cache/: redis_cache.py
src/cli/: __init__.py  api_helpers.py  commands.py  display.py
src/core/: config_validator.py  constants.py  exceptions.py  logger.py  metrics.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_db_manager.py  test_due_processor.py  test_sync_atualizar.py  test_sync_novas.py  test_token_manager.py
(+14 files in other folders)
