[project]
name = "controle-siscomex"
version = "2.0.0"
description = "Sistema de gerenciamento de DUEs e integracao Siscomex/SAP"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Equipe de Desenvolvimento" }
]
keywords = ["siscomex", "due", "exportacao", "sap", "drawback"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
    "boto3>=1.34.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
optional = [
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "types-requests>=2.31.0.20240602",
    "pre-commit>=3.6.0",
]

[project.scripts]
siscomex = "main:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = "\\.pyi?$"
exclude = '''
/(
    \\.git
    | \\.venv
    | build
    | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
disable_error_code = [
    "attr-defined",
    "no-any-return",
    "misc",
    "operator",
    "return-value",
    "var-annotated",
    "assignment",
    "union-attr",
    "arg-type",
    "has-type",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
